# learning-fastapi

./: pyproject.toml  requirements.txt
app/: main.py  models.py
app/routers/: items.py
