[tool.poetry]
name = "learning-fastapi"
version = "0.1.0"
description = ""
authors = ["kawatan1927 <haruto.kawata@solxyz.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
click = "8.1.7"
colorama = "0.4.6"
fastapi = "0.115.3"
h11 = "0.14.0"
httptools = "0.6.4"
idna = "3.10"
iniconfig = "2.0.0"
packaging = "24.1"
pluggy = "1.5.0"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pytest = "8.3.3"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
sniffio = "1.3.1"
starlette = "0.41.0"
typing-extensions = "4.12.2"
uvicorn = "0.32.0"
watchfiles = "0.24.0"
websockets = "14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
